Fix: Remove CSS causing blurriness

--- a/src/portal.css
+++ b/src/portal.css
@@ -1,13 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@theme {
-  /* Mengecilkan skala jarak antar elemen sebesar 50% */
-  --spacing-scale: 0.5;
-}
-
-html {
-  /* Mengecilkan basis ukuran semua elemen yang menggunakan rem */
-  font-size: 8px;
-}
